added further information for teachers and regarding endpoint
